@@ -1,0 +1,14 @@
+<todo version="0.1.19">
+    <note priority="medium" time="1217603754">
+        add overloading to all the packages so they behave well when printed and added
+    </note>
+    <note priority="medium" time="1217603764">
+        repair the documentation to the point that it lives up to expectations
+    </note>
+    <note priority="medium" time="1217603785">
+        add so many short cuts you don't need to learn to use the package
+    </note>
+    <note priority="medium" time="1217604379">
+        teach the modules to interact better so there's no need to, for example, explicitly set the mean of a co-varience
+    </note>
+</todo>
