@@ -3,6 +3,9 @@
 use ExtUtils::MakeMaker;
 
 WriteMakefile(
-    'NAME'         => 'Statistics::Basic',
-    'VERSION_FROM' => 'Basic.pm',
+    'NAME'          => 'Statistics::Basic',
+    'VERSION_FROM'  => 'Basic.pm',
+    'PREREQ_PM'     => { 
+        'Number::Format' => 0,
+    }
 );
