@@ -2,6 +2,10 @@
    - bringing this distro up to date, apparently people actually
      use it.
    - tons of doc fixes
+   - adding an overloader class to deal with "" and 0+
+   - pre-reqed in Number::Format for ""
+   - forget returning undef cardinality, vector sizes are 0 when
+     they don't have a size set.
 
 0.42:  Wed Jan 25 17:22:11 EST 2006
    - jettero patched in Orien's things
